# touche-driver

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/aoa/: mod.rs  utils.rs
src/aoa_util/: mod.rs
src/data/: mod.rs
src/devices/: mod.rs
src/driver/: device_builder.rs  devices.rs  mod.rs
src/graphics_tablet/: mod.rs
src/touchpad/: mod.rs
src/util/: aoa.rs  hex.rs  mod.rs  parser.rs
