[package]
name = "touche-driver"
version = "0.2.0"
edition = "2024"

[dependencies]
futures-lite = "2.6.0"
mio = "1.0.3"
nusb = "0.1.13"
env_logger = "0.11.8"
log = "0.4.27"
chrono = "0.4.40"

[target.'cfg(unix)'.dependencies]
evdev = "0.13.1"

[target.'cfg(windows)'.dependencies]
windows = "0.61.1"
